# BMA456-SensorAPI-Zephyr

./: CMakeLists.txt  prj.conf
src/: activity.c  bma4.c  bma456w.c  common.c  motion.c  step_counter.c
